--- a/assets/css/slick.css
+++ b/assets/css/slick.css
@@ -319,3 +319,23 @@
     color: black;
 }
 
+
+.chatbot {
+    position: fixed;
+    z-index: 99999999;
+    border-radius: 25px;
+    padding: 10px;
+    width: 160px;
+    height: 50px;
+	background-color: cadetblue;
+}
+
+ #content-mobile {display: none;}
+
+  /* Smartphone Portrait and Landscape */
+  @media only screen
+    and (min-device-width : 320px)
+    and (max-device-width : 480px){ 
+      #content-mobile  {display: inline;}
+	  #content-desktop {display: none;}
+  }
